#https://github.com/tiernemi/meson-sample-project/blob/master/meson.build

project( 'fttimer'
  , 'cpp'
  , version : '0.0.1.-1'
  , license : 'Apache 2.0'
  )

fttimer_lib = static_library( 'fttimer'
  , 'src/FTTimer.cpp'
  , include_directories : 'src' 
  )

#testexec = executable( 'FTTimerTest', 'FTTimerTest.cpp' )
#test( 'Unit Test', testexec )

#Test sources
#gtest = subproject('gtest')



